--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -161,10 +161,6 @@ jobs:
       run: |
         mkdir -p ~/.m2
         
-        # Escape special XML characters in credentials
-        NEXUS_USERNAME_ESCAPED=$(echo "$NEXUS_USERNAME" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/"/\&quot;/g; s/'"'"'/\&apos;/g')
-        NEXUS_PASSWORD_ESCAPED=$(echo "$NEXUS_PASSWORD" | sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/"/\&quot;/g; s/'"'"'/\&apos;/g')
-        
         cat > ~/.m2/settings.xml << 'EOF'
         <?xml version="1.0" encoding="UTF-8"?>
         <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
@@ -174,21 +170,17 @@ jobs:
           <servers>
             <server>
               <id>nexus-releases</id>
-              <username>NEXUS_USERNAME_PLACEHOLDER</username>
-              <password>NEXUS_PASSWORD_PLACEHOLDER</password>
+              <username>NEXUS_USERNAME</username>
+              <password>NEXUS_PASSWORD</password>
             </server>
             <server>
               <id>nexus-snapshots</id>
-              <username>NEXUS_USERNAME_PLACEHOLDER</username>
-              <password>NEXUS_PASSWORD_PLACEHOLDER</password>
+              <username>NEXUS_USERNAME</username>
+              <password>NEXUS_PASSWORD</password>
             </server>
           </servers>
         </settings>
         EOF
-        
-        # Replace placeholders with escaped values
-        sed -i "s/NEXUS_USERNAME_PLACEHOLDER/$NEXUS_USERNAME_ESCAPED/g" ~/.m2/settings.xml
-        sed -i "s/NEXUS_PASSWORD_PLACEHOLDER/$NEXUS_PASSWORD_ESCAPED/g" ~/.m2/settings.xml
         
         echo "✅ Maven settings.xml configured successfully"
         echo "Settings file contents (with masked credentials):"
