--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -178,9 +178,8 @@ jobs:
         EOF
         
         echo "✅ Maven settings.xml configured successfully"
-        echo "Server configurations:"
-        echo "  - nexus-releases: ${NEXUS_USERNAME}"
-        echo "  - nexus-snapshots: ${NEXUS_USERNAME}"
+        echo "Server configuration:"
+        echo "  - adeutschmanndev-nexus: ${NEXUS_USERNAME}"
       env:
         NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
         NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
@@ -192,17 +191,33 @@ jobs:
         chmod +x ./mvnw
         
         # Try multiple methods to extract version
-        echo "Attempting to extract version from pom.xml..."
+        echo "Attempting to extract project information from pom.xml..."
         
-        # Method 1: Try Maven wrapper
-        if CURRENT_VERSION=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout 2>/dev/null); then
-          echo "✅ Version extracted using Maven wrapper: $CURRENT_VERSION"
+        # Method 1: Try Maven wrapper for all project info
+        if CURRENT_VERSION=$(./mvnw help:evaluate -Dexpression=project.version -q -DforceStdout 2>/dev/null) && \
+           GROUP_ID=$(./mvnw help:evaluate -Dexpression=project.groupId -q -DforceStdout 2>/dev/null) && \
+           ARTIFACT_ID=$(./mvnw help:evaluate -Dexpression=project.artifactId -q -DforceStdout 2>/dev/null); then
+          echo "✅ Project info extracted using Maven wrapper:"
+          echo "  GroupId: $GROUP_ID"
+          echo "  ArtifactId: $ARTIFACT_ID" 
+          echo "  Version: $CURRENT_VERSION"
         else
           echo "⚠️ Maven wrapper failed, trying alternative methods..."
         
           # Method 2: Parse pom.xml directly
           CURRENT_VERSION=$(grep -m1 '<version>' pom.xml | sed 's/.*<version>\(.*\)<\/version>.*/\1/' | xargs)
-          echo "✅ Version extracted from pom.xml: $CURRENT_VERSION"
+          GROUP_ID=$(grep -m1 '<groupId>' pom.xml | sed 's/.*<groupId>\(.*\)<\/groupId>.*/\1/' | xargs)
+          ARTIFACT_ID=$(grep -m1 '<artifactId>' pom.xml | sed 's/.*<artifactId>\(.*\)<\/artifactId>.*/\1/' | xargs)
+          echo "✅ Project info extracted from pom.xml:"
+          echo "  GroupId: $GROUP_ID"
+          echo "  ArtifactId: $ARTIFACT_ID"
+          echo "  Version: $CURRENT_VERSION"
+        fi
+        
+        # Validate extracted values
+        if [[ -z "$GROUP_ID" || -z "$ARTIFACT_ID" ]]; then
+          echo "❌ Failed to extract groupId or artifactId"
+          exit 1
         fi
         
         # Validate version format
@@ -212,6 +227,9 @@ jobs:
           CURRENT_VERSION="0.0.1-SNAPSHOT"
         fi
         
+        # Set outputs
+        echo "group_id=$GROUP_ID" >> $GITHUB_OUTPUT
+        echo "artifact_id=$ARTIFACT_ID" >> $GITHUB_OUTPUT
         echo "current_version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
 
         # Remove -SNAPSHOT suffix and extract version parts
@@ -231,9 +249,12 @@ jobs:
         echo "release_version=$RELEASE_VERSION" >> $GITHUB_OUTPUT
         echo "next_snapshot_version=$NEXT_SNAPSHOT_VERSION" >> $GITHUB_OUTPUT
 
-        echo "Current version: $CURRENT_VERSION"
-        echo "Release version: $RELEASE_VERSION"
-        echo "Next snapshot version: $NEXT_SNAPSHOT_VERSION"
+        echo "📋 Project Summary:"
+        echo "  GroupId: $GROUP_ID"
+        echo "  ArtifactId: $ARTIFACT_ID"
+        echo "  Current version: $CURRENT_VERSION"
+        echo "  Release version: $RELEASE_VERSION"
+        echo "  Next snapshot version: $NEXT_SNAPSHOT_VERSION"
 
     - name: Set release version
       run: |
@@ -243,9 +264,30 @@ jobs:
     - name: Deploy release to Nexus
       run: |
         echo "🚀 Deploying to Nexus repository..."
-        echo "Using distributionManagement configuration from pom.xml"
-        ./mvnw deploy -DskipTests
-        echo "✅ Successfully deployed to Nexus"
+        echo "Project: ${{ steps.version.outputs.group_id }}:${{ steps.version.outputs.artifact_id }}:${{ steps.version.outputs.release_version }}"
+        
+        # Determine repository URL based on version type
+        if [[ "${{ steps.version.outputs.release_version }}" == *"-SNAPSHOT" ]]; then
+          REPO_URL="${{ secrets.NEXUS_URL }}/repository/maven-snapshots/"
+          echo "📦 Deploying SNAPSHOT to: $REPO_URL"
+        else
+          REPO_URL="${{ secrets.NEXUS_URL }}/repository/maven-releases/"
+          echo "📦 Deploying RELEASE to: $REPO_URL"
+        fi
+        
+        # Deploy using Maven deploy plugin with dynamic project coordinates
+        ./mvnw deploy:deploy-file \
+          -DgroupId=${{ steps.version.outputs.group_id }} \
+          -DartifactId=${{ steps.version.outputs.artifact_id }} \
+          -Dversion=${{ steps.version.outputs.release_version }} \
+          -Dpackaging=jar \
+          -Dfile=target/${{ steps.version.outputs.artifact_id }}-${{ steps.version.outputs.release_version }}.jar \
+          -DrepositoryId=adeutschmanndev-nexus \
+          -Durl=$REPO_URL \
+          -DgeneratePom=false \
+          -DpomFile=pom.xml
+        
+        echo "✅ Successfully deployed ${{ steps.version.outputs.group_id }}:${{ steps.version.outputs.artifact_id }}:${{ steps.version.outputs.release_version }} to: $REPO_URL"
 
     - name: Create Git tag for release
       run: |
