fix: Add step to download JAR artifact in build-and-deploy workflow

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -157,6 +157,12 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
 
+    - name: Download JAR artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: spring-boot-helloworld-jar-${{ github.sha }}
+        path: target/
+
     - name: Configure Maven settings for Nexus
       run: |
         mkdir -p ~/.m2
