--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -176,8 +176,8 @@ jobs:
           <servers>
             <server>
               <id>adeutschmanndev-nexus</id>
-              <username>${NEXUS_USERNAME}</username>
-              <password>${NEXUS_PASSWORD}</password>
+              <username>$NEXUS_USERNAME</username>
+              <password>$NEXUS_PASSWORD</password>
             </server>
           </servers>
         </settings>
