--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -176,19 +176,14 @@ jobs:
           <servers>
             <server>
               <id>adeutschmanndev-nexus</id>
-              <username>${NEXUS_USERNAME}</username>
-              <password>${NEXUS_PASSWORD}</password>
+              <username>${{ secrets.NEXUS_USERNAME }}</username>
+              <password>${{ secrets.NEXUS_PASSWORD }}</password>
             </server>
           </servers>
         </settings>
         EOF
         
         echo "✅ Maven settings.xml configured successfully"
-        echo "Server configuration:"
-        echo "  - adeutschmanndev-nexus: ${NEXUS_USERNAME}"
-      env:
-        NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-        NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
 
     - name: Extract current version
       id: version
