--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,7 +15,7 @@ env:
   JAVA_VERSION: '21'
   MAVEN_OPTS: '-Xmx1024m'
   REGISTRY: ghcr.io
-  IMAGE_NAME: spring-boot-helloworld
+  IMAGE_NAME: adeutschmann/spring-boot-helloworld
 
 jobs:
   build:
