--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,7 +12,6 @@ permissions:
   packages: write
 
 env:
-  JAVA_VERSION: '21'
   MAVEN_OPTS: '-Xmx1024m'
   REGISTRY: ${{ secrets.NEXUS_DOCKER_REGISTRY }}
   IMAGE_NAME: spring-boot-helloworld
@@ -28,10 +27,18 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
 
-    - name: Set up JDK ${{ env.JAVA_VERSION }}
+    - name: Extract Java version from pom.xml
+      id: java-version
+      run: |
+        # Extract Java version from pom.xml properties
+        JAVA_VERSION=$(grep -A 5 '<properties>' pom.xml | grep '<java.version>' | sed 's/.*<java.version>\(.*\)<\/java.version>.*/\1/' | xargs)
+        echo "Extracted Java version: $JAVA_VERSION"
+        echo "java-version=$JAVA_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Set up JDK ${{ steps.java-version.outputs.java-version }}
       uses: actions/setup-java@v4
       with:
-        java-version: ${{ env.JAVA_VERSION }}
+        java-version: ${{ steps.java-version.outputs.java-version }}
         distribution: 'temurin'
 
     - name: Cache Maven dependencies
@@ -182,10 +189,18 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
 
-    - name: Set up JDK ${{ env.JAVA_VERSION }}
+    - name: Extract Java version from pom.xml
+      id: java-version
+      run: |
+        # Extract Java version from pom.xml properties
+        JAVA_VERSION=$(grep -A 5 '<properties>' pom.xml | grep '<java.version>' | sed 's/.*<java.version>\(.*\)<\/java.version>.*/\1/' | xargs)
+        echo "Extracted Java version: $JAVA_VERSION"
+        echo "java-version=$JAVA_VERSION" >> $GITHUB_OUTPUT
+
+    - name: Set up JDK ${{ steps.java-version.outputs.java-version }}
       uses: actions/setup-java@v4
       with:
-        java-version: ${{ env.JAVA_VERSION }}
+        java-version: ${{ steps.java-version.outputs.java-version }}
         distribution: 'temurin'
 
     - name: Cache Maven dependencies
