--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -452,3 +452,36 @@ jobs:
         echo "- **Maven Build**: $(if [ ${{ job.status }} == 'success' ]; then echo '✅ Success'; else echo '❌ Failed'; fi)" >> $GITHUB_STEP_SUMMARY
         echo "- **Nexus Deploy**: $(if [ ${{ job.status }} == 'success' ]; then echo '✅ Deployed'; else echo '❌ Failed'; fi)" >> $GITHUB_STEP_SUMMARY
         echo "- **Git Tag**: v${{ steps.version.outputs.release_version }}" >> $GITHUB_STEP_SUMMARY
+  update-dev-overlay:
+    runs-on: ubuntu-latest
+    needs: build-container        # ← your job that pushed the image
+    if: needs.build-container.result == 'success'
+    steps:
+      - name: Checkout config repo
+        uses: actions/checkout@v4
+        with:
+          repository: adeutschmann-dev/spring-boot-hello-world-gitops
+          token: ${{ secrets.CONFIG_REPO_TOKEN }}   # PAT with repo write perms
+          ref: main
+          path: config-repo
+
+      - name: Install yq
+        run: sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 && sudo chmod +x /usr/local/bin/yq
+
+      - name: Update image tag in dev overlay
+        env:
+          TAG: ${{ needs.build-container.outputs.image-version || needs.build-container.outputs.tag || steps.version.outputs.release_version }}
+        run: |
+          cd config-repo/environments/dev
+          yq -i '
+            (.images[] | select(.name == "registry-nexus.apps.ocp4.adeutschmann.dev/spring-boot-helloworld")).newTag = env(TAG)
+          ' kustomization.yaml
+
+      - name: Commit & push
+        run: |
+          cd config-repo
+          git config user.name "ci-bot"
+          git config user.email "ci@example.com"
+          git add environments/dev/kustomization.yaml
+          git commit -m "Deploy dev: spring-boot-helloworld:${{ env.TAG }}"
+          git push
